Ajustes no SIMECC imports, deprecated and minimal version spring update